docs: update readme with additional information

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>-JS-</title>
   </head>
+  <link href="/style.css" rel="stylesheet">
   <body>
     <img src="img/js.JPG" alt="js">
     <p>
