docs: update readme with additional information

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>-JS-</title>
+    <title>-JavaS.-</title>
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <link href="/style.css" rel="stylesheet">
     <img src="img/js.JPG" alt="js">
     <p>
-      JS FS
+      -------JS FS----------
     </p>
   </body>
 </html>
