docs: update readme with additional information

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/css/style.css">
     <meta charset="UTF-8">
     <title>-JavaS.-</title>
-    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
+    <h1> -------JS FS---------</h1>
     <img src="img/js.JPG" alt="js">
-    <p>
-      -------JS FS---------
-    </p>
+    <p class="text">----------------------------------------------------------------</p>
   </body>
 </html>
