docs: update readme with additional information

--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>-JavaS.-</title>
   </head>
-  <body>
-    <h1> -------JS FS---------</h1>
-    <img src="img/js.JPG" alt="js">
-    <p class="text">----------------------------------------------------------------</p>
+  <body style="background-color: #545c51">
+    <div id="header">
+      <img src="img/js.JPG" width="150px" height="150px" alt="js" align="lefr">
+      <p align="center"><font color="#dba736" face="Arial Black">Nekrashevich Vladimir</font></p>
+    </div>
+    <div id="main">
+      <main align="center">
+        <h1>About Me</h1>
+        <p>I am 38 years old</p>
+        <section>
+          <h1>Skills</h1>
+          <p>HTML</p>
+        </section>
+        <section>
+          <h1>Code example</h1>
+          <p>
+            &ltscript&gt
+            alert( 'Hello World!' );
+            &lt/script&gt</p>
+        </section>
+        <section>
+          <h1>Work experience</h1>
+          <a href="http://zapravlayem.narod.ru" class="site" target="_blank">My site</a>
+        </section>
+        <section>
+          <h1>Education</h1>
+          <p>Humanitarium</p>
+        </section>
+        <section>
+          <h1>English level</h1>
+          <p>A2</p>
+        </section>
+      </main>
+    </div>
+    <div id="footer">
+    <p><b>Contacts: </b>
+      e-mail: vovanek@yandex.ru  ///  Phone: +375447098916</p>
+    </div>
+    <p class="text">-----------------------------------------------------------------------------------------</p>
   </body>
 </html>
