docs: update readme with additional information

--- a/index.html
+++ b/index.html
@@ -15,34 +15,38 @@
         <h1>About Me</h1>
         <p>I am 38 years old</p>
         <section>
-          <h1>Skills</h1>
-          <p>HTML</p>
+          <h2>Skills</h2>
+          <li>HTML</li>
         </section>
         <section>
-          <h1>Code example</h1>
+          <h2>Code example</h2>
           <p>
             &ltscript&gt
             alert( 'Hello World!' );
             &lt/script&gt</p>
         </section>
         <section>
-          <h1>Work experience</h1>
+          <h2>Work experience</h2>
           <a href="http://zapravlayem.narod.ru" class="site" target="_blank">My site</a>
         </section>
         <section>
-          <h1>Education</h1>
+          <h2>Education</h2>
           <p>Humanitarium</p>
         </section>
         <section>
-          <h1>English level</h1>
+          <h2>English level</h2>
           <p>A2</p>
         </section>
       </main>
     </div>
     <div id="footer">
-    <p><b>Contacts: </b>
-      e-mail: vovanek@yandex.ru  ///  Phone: +375447098916</p>
+      <p><a href="https://rs.school/js/"><img src="img/rs_logo.JPG" width="200px" height="80px" alt="js" align="right" alt="RSschool"></a></p>
+      <ul><b>Contacts:</b>
+       <li>e-mail: vovanek@yandex.ru</li>
+       <li>Phone: +375447098916 </li>
+       <li><nav><a href="index.html">About Me</a></nav></ul>
     </div>
-    <p class="text">-----------------------------------------------------------------------------------------</p>
+     <p class="text">-----------------------------------------------------------------------------------------</p>
+     <p align="center">© 2022 by <a href="https://github.com/v0vanek/">v0vanek</a></p>
   </body>
 </html>
