docs: update readme with additional information

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <title>-JavaS.-</title>
   </head>
   <body style="background-color: #545c51">
     <div id="header">
-      <img src="img/js.JPG" width="150px" height="150px" alt="js" align="lefr">
+      <img src="img/js.JPG" width="150px" height="150px" alt="js" align="center">
       <p align="center"><font color="#dba736" face="Arial Black">Nekrashevich Vladimir</font></p>
-    </div>
+       </div>
     <div id="main">
       <main align="center">
         <h1>About Me</h1>
@@ -46,7 +46,6 @@
        <li>Phone: +375447098916 </li>
        <li><nav><a href="index.html">About Me</a></nav></ul>
     </div>
-     <p class="text">-----------------------------------------------------------------------------------------</p>
      <p align="center">© 2022 by <a href="https://github.com/v0vanek/">v0vanek</a></p>
   </body>
 </html>
